[package]
name = "error_handling"
version = "0.1.0"
edition = "2024"

[dependencies]




# Unwinding the Stack or Aborting in Response to a Panic

# By default, when a panic occurs, the program starts UNWINDING, which means Rust walks back up the stack and cleans up the data from each function it encounters. 
# However, walking back and cleaning up is a lot of work. 
# Rust therefore allows you to choose the alternative of immediately ABORTING, which ends the program without cleaning up.

# Memory that the program was using will then need to be cleaned up by the operating system. 
# If in your project you need to make the resultant binary as small as possible, you can switch from unwinding to aborting upon a panic by adding panic = 'abort' to the appropriate [profile] sections in your Cargo.toml file. 
# For example, if you want to abort on panic in release mode, add this:
[profile.release]
panic = 'abort'
